Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133320

The translate dialog is not working correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.10.0 FF
    • 6.7.2
    • Tools: Linguist
    • None
    • 63d03e3b0 (dev)

      Bugs:

      • If you go through all the words to translate and give up trying to start the search again on the last comparison, and then try to find the next words again and agree to start the search again, the behavior of the dialog box breaks down. The popup dialog box that should appear when the last found match is reached sarts appearing randomly. The same behavior is observed if, before starting the search for a word, we select any word after the one we are looking for and start the search from that place.
      • Incorrect behavior was also noticed, if we found a word for us, the "Translate" button is not active, but if we click on the "Match case" checkbox, the "Translate" button becomes active.

      I'm attaching a patch that fixes these bugs.

        1. fix-translate-dialog.patch
          6 kB
        2. linguist_qt6_bug.mp4
          2.43 MB
        3. test.ts
          2 kB
        For Gerrit Dashboard: QTBUG-133320
        # Subject Branch Project Status CR V

            masoud.jami Masoud Jami
            lq12123 Dmitrii Fomchenkov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes